--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,6 +11,8 @@ builds:
       - CGO_ENABLED=0
     ldflags:
       - -s -w
+      - -X github.com/janog-netcon/netcon-cli/pkg/version.Version={{.Version}}
+      - -X github.com/janog-netcon/netcon-cli/pkg/version.Revision={{.ShortCommit}}
     goos:
       - linux
     goarch:
@@ -29,10 +31,16 @@ builds:
 archives:
   - id: netcon-cli-archive
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+    replacements:
+      darwin: darwin
+      linux: linux
+      windows: windows
+      386: i386
+      amd64: x86_64
 
 # publish
 release:
-  disable: true
+  prerelease: auto
 checksum:
   name_template: 'checksums.txt'
 snapshot:
