--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,15 @@
 name: release
 on:
   push:
+    branches:
+    - main
     tags:
     - "v[0-9]+.[0-9]+.[0-9]+"
+
+env:
+  REPOSITORY_NAME: hnron-public.sakuracr.jp
+  IMAGE_NAME: netcon
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -22,3 +29,25 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
+
+
+      - name: Log into registry
+        run: echo "${{ secrets.SAKURACR_PASSWORD }}" | docker login $REPOSITORY_NAME -u ${{ secrets.SAKURACR_USERNAME }} --password-stdin
+      - name: Push image
+        run: |
+          IMAGE_ID=$REPOSITORY_NAME/$IMAGE_NAME
+
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "main" ] && VERSION=latest
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
