--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,10 @@ name: release
 on:
   push:
     branches:
-    - main
+    - '*'
     tags:
-    - "v[0-9]+.[0-9]+.[0-9]+"
+    #- "v[0-9]+.[0-9]+.[0-9]+"
+    - '*'
 
 env:
   REPOSITORY_NAME: hnron-public.sakuracr.jp
@@ -37,6 +38,9 @@ jobs:
         run: |
           IMAGE_ID=$REPOSITORY_NAME/$IMAGE_NAME
 
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
 
@@ -51,3 +55,4 @@ jobs:
 
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+
