workflowの環境変数の使用方法を修正

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           username: ${{ secrets.SAKURACR_USERNAME }}
           password: ${{ secrets.SAKURACR_PASSWORD }}
-          repository: ${{ REPOSITORY_NAME }}/${{ IMAGE_NAME }}
+          repository: $REPOSITORY_NAME/$IMAGE_NAME
           tag_with_ref: true
 
       #- name: Log into registry
