--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,6 @@ on:
     #- "v[0-9]+.[0-9]+.[0-9]+"
     - '*'
 
-env:
-  REGISTRY_NAME: hnron-public.sakuracr.jp
-  IMAGE_NAME: netcon
-
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -37,8 +33,8 @@ jobs:
         with:
           username: ${{ secrets.SAKURACR_USERNAME }}
           password: ${{ secrets.SAKURACR_PASSWORD }}
-          registry: $REGISTRY_NAME
-          repository: $IMAGE_NAME
+          registry: hnron-public.sakuracr.jp
+          repository: netcon
           tag_with_ref: true
 
       #- name: Log into registry
