--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,10 +43,10 @@ jobs:
 
 
       - name: Log into registry
-        run: echo "${{ secrets.SAKURACR_PASSWORD }}" | docker login $REPOSITORY_NAME -u ${{ secrets.SAKURACR_USERNAME }} --password-stdin
+        run: echo "${{ secrets.SAKURACR_PASSWORD }}" | docker login $REGISTRY_NAME -u ${{ secrets.SAKURACR_USERNAME }} --password-stdin
       - name: Push image
         run: |
-          IMAGE_ID=$REPOSITORY_NAME/$IMAGE_NAME
+          IMAGE_ID=$REGISTRY_NAME/$IMAGE_NAME
 
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
